--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 itertools = "0.12.0"
-ndarray = "0.15.6"
+ndarray = { version = "0.15.6", features = ["rayon"] }
 rayon = "1.8.0"
+strum = { version = "0.25.0", features = ["derive"] }
 text2num = "2.1.4"
